fix uiskin.json content

--- a/assets/stats.cfg
+++ b/assets/stats.cfg
@@ -1,17 +1,14 @@
-PAWN.hp=1
-PAWN.attackRate=1.0
-
-KNIGHT.hp=10
-KNIGHT.attackRate=1.5
-
-BISHOP.hp=3
+#Chess Piece Stats Configuration
+#Tue Mar 11 21:17:28 CET 2025
 BISHOP.attackRate=2.5
-
-ROOK.hp=10
-ROOK.attackRate=2.0
-
-QUEEN.hp=15
-QUEEN.attackRate=3.0
-
-KING.hp=30
+BISHOP.hp=3
 KING.attackRate=1.0
+KING.hp=30
+KNIGHT.attackRate=1.5
+KNIGHT.hp=10
+PAWN.attackRate=1.0
+PAWN.hp=1
+QUEEN.attackRate=3.0
+QUEEN.hp=15
+ROOK.attackRate=2.0
+ROOK.hp=10
