--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
   }
   dependencies {
 
-
   }
 }
 
@@ -68,6 +67,22 @@ subprojects {
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
     maven { url 'https://jitpack.io' }
+  }
+
+  dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+
+  }
+
+  test {
+    useJUnitPlatform()
+    include '**/*Test.class'
+    testLogging {
+      events "passed", "skipped", "failed"
+    }
   }
 }
 
